# pipedream

./: .gitignore  README.md  TECHNICAL_DESIGN.md  USAGE_EXAMPLES.md  pipedream-tree.txt  requirements.txt  setup.cfg  test_ncbi_api.py  test_ncbi_no_api_key.py
assay_design/: __init__.py  cache_manager.py  cli.py  data_retrieval.py  gene_selection.py  hierarchical_search.py  kmer_analysis.py  lsh_sequence_search.py  primer_probe_design.py  specificity_validation.py  target_identification.py  visualization.py
assay_design.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: IMPLEMENTATION_PLAN.md
misc/: Mgene_Alignment FastTree Tree Annotations.tsv  Mgene_Alignment FastTree Tree.newick  Mgene_Alignment FastTree Tree.nex  Mgene_Alignment_FastTree.geneious  Mgene_Tree_Alignment.geneious
misc/CDCpox_NC_WW/kraken2reports/: SQK-NBD114-96_barcode12_unclassified.kraken2.report.out  SQK-NBD114-96_barcode13_unclassified.kraken2.report.out  SQK-NBD114-96_barcode13_unclassified.kraken2.report_bracken_species.out  SQK-NBD114-96_barcode14_unclassified.kraken2.report.out  SQK-NBD114-96_barcode14_unclassified.kraken2.report_bracken_species.out  (+4 more)
output/sequences/: exclusion_sequences.fasta  inclusion_sequences.fasta
scripts/: fetch_genome_example.py  local_sequence_analysis.py
tests/: test_data_retrieval.py  test_data_retrieval_enhanced.py  test_gene_selection.py  test_gene_selection_phase2.py  test_primer_design.py  test_specificity_validation.py  test_target_identification.py  test_weighted_taxa.py
(+8 files in other folders)
