[metadata]
name = assay_design
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A package for designing specific molecular assays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/assay_design
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    biopython>=1.79
    click>=8.0
    numpy>=1.20.0
    pybloom-live>=3.0.0

[options.entry_points]
console_scripts =
    assay-design = assay_design.cli:main